[package]
name = "dhl_wrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.52"
chrono = { version = "0.4", features = ["serde"] }
convert_case = "0.5.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.17", features = ["full"] }

[dev-dependencies]
dotenv = "0.15"